clusters/default/checkmk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkmk
  namespace: checkmk
  labels:
    app: checkmk
spec:
  selector:
    app: checkmk
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
